# Capstone_Project

./: CMakeLists.txt  README.md
include/: detector.hpp  read.hpp  readwrite.hpp  utils.hpp  write.hpp
src/: detector.cpp  main.cpp  read.cpp  readwrite.cpp  write.cpp
